* Made FlowExecutionSnapshotGroup public for serialization reasons
* Fixed bug where a flow execution snapshot id was not always incremented, which could lead to collisions between multiple windows sharing the same execution (SWF-1098).
* Fixed bug where updating ViewState history could result in exceptions if no flow execution key was assigned or no snapshot had been taken (SWF-1099).

Improvements
* Added userEventQueued and getUserEventState methods to View SPI, which simplified ViewState and View object interaction.
  Custom View implementations will need to be updated to implement these new operations.  See View's API JavaDocs and ViewState's doEnter and resume implementations.
* Added org.springframework.webflow dm Server library definition for use in a dm Server deployment environment (SWF-1067)
* Strengthened contract for response-related methods in ExternalContext.  Specifically, calling any of the requestRedirect methods also now completes the response.
  If you attempt to complete a response more than once against an ExternalContext, an IllegalStateException is thrown.
* Documented how to obtain Web Flow development branch snapshots using Maven, for both Maven Central compatible usage and SpringSource Enterprise Bundle Repository usage.
* Updated OSGi Manifest imports to allow Web Flow 2.0.7 to work with Spring Framework 3.0.x in a OSGi environment

Changes in version 2.0.6 (2009.03.12)
-------------------------------------
General
* Changed Maven artifact ids for the org.springframework.webflow projects to be consistent with other Spring artifacts published to Maven Central (SWF-993).
  This change was made to prevent conflicts when resolving artifacts from both Maven Central and the OSGi-ready SpringSource Bundle Repository.
  NOTE: this change will require an artifact-id update as well as a version update to your poms that obtain Spring Web Flow artifacts from Maven Central.